chatdev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatdev
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: chatdev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chatdev
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: America/Detroit
        image: reallingua/chat:latest
        imagePullPolicy: Always
        name: chatdev
        ports:
        - containerPort: 3000
          name: chatdev
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
