chatdev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatdev
    kubernetes.io/name: chatdev
  name: chatdev
  namespace: default
spec:
  ports:
  - name: chatdev
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: chatdev
  type: ClusterIP
